--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="app_name">Trivial Drive ASF Sample</string>
+    <string name="app_name">Trivial Drive AppCoins Sample</string>
     <string name="menu_settings">Settings</string>
     <string name="title_activity_main">Trivial Drive</string>
 
