Add new donation button and logic to handle donation response.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,4 +15,6 @@
     <string name="content_description_title_image">80\'s Video Game Style Car Logo</string>
     <string name="content_desc_gas_gauge_indicator">Gas gauge indicator</string>
     <string name="content_desc_free_vs_premium_indicator">Free or Premium Image Indicator</string>
+    <string name="dialog_donation_success_msg">Thank you for your donation!</string>
+    <string name="dialog_donation_fail_msg">Sadly your donation was not received.</string>
 </resources>
